--- a/frontend/web/maxja-dapp/src/scss/App.scss
+++ b/frontend/web/maxja-dapp/src/scss/App.scss
@@ -5,6 +5,7 @@
   src: url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap');
 }
 .html, body {
+  margin: 0;
   height: 100%;
   width: 100%;
   font-family: 'Fira Sans', sans-serif;
