--- a/frontend/web/maxja-dapp/src/scss/App.scss
+++ b/frontend/web/maxja-dapp/src/scss/App.scss
@@ -10,3 +10,9 @@
   width: 100%;
   font-family: 'Fira Sans', sans-serif;
 }
+
+.background {
+  background-image: url('../assets/backgroundMaxjaResized.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100vw;}
