Routing, BuyCrpyto component, and new background added

--- a/frontend/web/maxja-dapp/src/scss/App.scss
+++ b/frontend/web/maxja-dapp/src/scss/App.scss
@@ -12,7 +12,7 @@
 }
 
 .background {
-  background-image: url('../assets/backgroundMaxjaResized.png');
+  background-image: url('../assets/background.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100vw;}
+  background-size: cover;}
