--- a/frontend/web/maxja-dapp/src/scss/App.scss
+++ b/frontend/web/maxja-dapp/src/scss/App.scss
@@ -4,6 +4,8 @@
   font-family: 'Fira Sans';
   src: url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap');
 }
+
+
 .html, body {
   margin: 0;
   height: 100%;
@@ -12,6 +14,7 @@
 }
 
 .background {
+  height: 70vh;
   background-image: url('../assets/background.png');
   background-repeat: no-repeat;
   background-position: center;
