fixed empty state container view nfts

--- a/frontend/web/maxja-dapp/src/scss/viewNFTs.scss
+++ b/frontend/web/maxja-dapp/src/scss/viewNFTs.scss
@@ -3,11 +3,17 @@
     width: 30vh;
 }
 
+
+
 @media only screen and (max-width: 490px) {
 
     .dialog-media-query {
         height: 40vh;
         width: 40vh;
+    }
+
+    .view-nfts-medai-query {
+        height: 70vh;
     }
 
 
