removed broken media queries on dialogs

--- a/frontend/maxja-dapp/src/scss/viewNFTs.scss
+++ b/frontend/maxja-dapp/src/scss/viewNFTs.scss
@@ -9,6 +9,10 @@
     height: 70vh;
 }
 
+.view-nft-media-query {
+    height: 100%;
+}
+
 
 
 @media only screen and (max-width: 490px) {
@@ -17,5 +21,10 @@
         height: 40vh;
         width: 40vh;
     }
+
+    .view-nft-media-query {
+        height: 70vh;
+    }
+    
 
 }
